# bmstu-web-7th-sem

./: .gitlab-ci.yml  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs
backend/src/connector/: api.rs  client.rs  dto.rs  mod.rs
backend/src/models/: consts.rs  mod.rs  models.rs
backend/src/services/: api.rs  auth.rs  dto.rs  methods.rs  mod.rs
docs/: bpmn.graphml  er.graphml  use-case.graphml
frontend/: Cargo.toml  build.rs
